[package]
name = "stable-sync"
edition = "2018"
version = "0.0.1"
authors = ["Maxence Caron <jean-arioldie@protonmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
futures-core-preview = { version = "0.3.0-alpha.18", default-features = false }
futures-util-preview = { version = "0.3.0-alpha.18", default-features = false }
lock_api = "0.3.1"
parking_lot = { version = "0.9" }
#abi_stable = "0.7"
abi_stable = { git = "https://github.com/jean-airoldie/abi_stable_crates", branch = "raw_locks" }

[dev-dependencies]
tokio-macros = "0.2.0-alpha.6"
futures-preview = { version = "0.3.0-alpha.18", default-features = true, features=["async-await"] }
futures-test-preview = { version = "0.3.0-alpha.18", default-features = true }
pin-utils = "0.1.0-alpha.4"
criterion = "0.3.0"
crossbeam = "0.7" # For channel benchmarks
lazy_static = "1.4.0"
rand = "0.7"
tokio = "0.2.0-alpha.4" # For channel benchmarks

[[bench]]
name = "mpmc_channel"
harness = false
